# flair

./: .flake8  .gitignore  .pre-commit-config.yaml  .sync_exclude  .travis.yml  .zappr.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile-flair-rosenberg  LICENSE  LICENSE.md  MAINTAINERS  MANIFEST.in  Pipfile  README.md  SECURITY.md  Untitled.ipynb  _experiment_script.py  _experiment_utils.py  _experiments_consistency.py  _experiments_realism.py  _experiments_simulation.py  _test.py  _test_datasets.py  _test_noise_models.py  biomed.py  build.sh  collect_env.py  create_models.py  embedding_shared.py  environment.yml  evaluation_senteval-sst_genetic.py  evaluation_senteval-sst_grid.py  evaluation_senteval-sst_random.py  evaluation_wnut_genetic.py  evaluation_wnut_random.py  example.py  example_hyperopt.py  example_tagger.py  (+53 more)
.amun/: amun.setup  config.json  experiments.json  jobs.json
.amun/slurm_virtual_env/: amun.setup
.codeboarding/: flair_data_Corpus.md  flair_data_DataPoint.md  flair_embeddings_base_Embeddings.md  flair_nn_model_Model.md  flair_tokenization_Tokenizer.md  on_boarding.md
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature-enhancement-request.md  feature-enhancement-request.yaml  question.md  question.yaml  test.yaml
.github/workflows/: ci.yml  cleanup-diskspace.yml  docs.yml  issues.yml  publish-docs.yml  test-docs.yml
Gazetteer Embeddings Playground/: gazetter_embeddings.py
assets/: README.md  redirect.html
data/: data.json  data.py
data/conll_03/: dev.txt  test.txt  train.txt
doc-page/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc-page/.doctrees/: environment.pickle  index.doctree
doc-page/_static/: documentation_options.js
doc-page/api/: flair.data.html  flair.datasets.html  flair.embeddings.html  flair.html  flair.models.html  flair.nn.html  flair.splitter.html  flair.tokenization.html  flair.trainers.html  flair.trainers.plugins.html  index.html
doc-page/contributing/: index.html  local_development.html  making_a_pull_request.html  updating_documentation.html  writing_a_good_issue.html
doc-page/tutorial/: index.html  intro.html
docs/: classes.rst  conf.py  index.html  index.rst  modules.rst  requirements.txt
docs/_static/: custom-icon.js  custom.css
docs/_templates/: darkmode-toggle.html  footer-links.html  header-reset-styles.html  landing-page-banner.html  landing-page-illustrations.html  landing-page.html  landing_page_styles.html  legal-notice-content.html  page.html  version-switcher.html  versioning.html
docs/api/: flair.data.rst  flair.datasets.base.rst  flair.datasets.rst  flair.embeddings.rst  flair.models.rst  flair.nn.rst  flair.rst  flair.splitter.rst  flair.tokenization.rst  flair.trainers.plugins.rst  flair.trainers.rst  index.rst
docs/theme/: layout.html  (+1 more)
evaluation_files/: evaluation_senteval-sst_genetic.py  evaluation_senteval-sst_grid.py  evaluation_senteval-sst_random.py  evaluation_ud-english_genetic.py  evaluation_ud-english_grid.py  evaluation_ud-english_random.py  evaluation_wnut_genetic.py  evaluation_wnut_grid.py  evaluation_wnut_random.py
examples/: README.md  iris_sentiment_analysis.py  train_embedding.py
flair/: __init__.py  auto_model.py  class_utils.py  data.py  data_fetcher.py  datasets.py  distributed_utils.py  embeddings.py  evaluation_wnut_grid.py  file_utils.py  gh-1647.py  inference_utils.py  language_model.py  multitask.py  nn.py  optim.py  samplers.py  splitter.py  tagging_model.py  test.py  test_train.py  tokenization.py  trainer.py  training_utils.py  wandb_logger.py
gazetteer_embeddings_playground/: gazetteer_embeddings_playground.py  gazetter_embeddings.py
gazetteer_embeddings_scripts/: gazetteer_embeddings_playground.py  gazetteer_entity_coverage.py  model_training_script.py  scraper.py
gazetteer_embeddings_train_scripts/: gazetteer_entity_coverage_conll_03.py  gazetter_embeddings_playground.py  model_training_script.py
gazetteer_feature_prediction_utils/: rnn_data_utils.py  rnn_gaz_regression_model.py  rnn_training_utils.py
master/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
resources/: build_docs.sh  common_characters
sample_metrics_scripts/: config_parameters.json  merge_optimal_F_score_tables.py  optimize_metric_parameters.py  pipeline_sample_metrics_token_categories.py  run.py  summarize_scores_sample_metrics.py  test_config_parameters.json
scripts/: span_tagger.py  train_span_tagger_multi.py
test_gazetteerEmbeddings/: test_gazetteer_embeddings_class.py
tests/: conftest.py  embedding_test_utils.py  fixtures.py  model_test_utils.py  test_augmentation.py  test_biomedical_entity_linking.py  test_corpus_dictionary.py  test_crf.py  test_data.py  test_data_fetchers.py  test_datasets.py  test_datasets_biomedical.py  test_embeddings.py  test_entity_linker.py  test_hs_init.py  test_hyperparameter.py  test_labels.py  test_language_model.py  test_language_model_trainer.py  test_lemmatizer.py  test_model_integration.py  test_models.py  test_multitask.py  test_relation_classifier.py  test_relation_extraction.py  test_sentence.py  test_sentence_chunking.py  test_sentence_labeling.py  test_sentence_serialization.py  test_sequence_labeler_trainer.py  test_sequence_tagger.py  test_tars.py  test_tars_sequence_tagger_bio.py  test_text_classifier.py  test_text_classifier_trainer.py  test_text_regressor.py  test_tokenization.py  test_tokenize_sentence.py  test_trainer.py  test_training_utils.py  (+4 more)
v0.13.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.13.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.14.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.15.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
v0.15.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
(+1634 files in other folders)
