[tool.poetry]
name = "flair"
version = "0.12.2"
description = "A very simple framework for state-of-the-art NLP"
readme = "README.md"
authors = ["Alan Akbik <alan.akbik@gmail.com>"]
maintainers = ["Alan Akbik <alan.akbik@gmail.com>"]
repository = "https://github.com/flairNLP/flair"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"

boto3 = ">=1.20.27"
bpemb = ">=0.3.2"
conllu = ">=4.0"
deprecated = ">=1.2.13"
ftfy = ">=6.1.0"
gdown = ">=4.4.0"
gensim = ">=4.2.0"
huggingface-hub = ">=0.10.0"
janome = ">=0.4.2"
langdetect = ">=1.0.9"
lxml = ">=4.8.0"
matplotlib = ">=2.2.3"
more-itertools = ">=8.13.0"
mpld3 = "==0.3"
numpy = [
    {version = "~1.21.6", python = "<3.8.0"},
    {version = ">=1.22.3", python = ">=3.8.0"},
]
pptree = ">=3.1"
python-dateutil = ">=2.8.2"
pytorch_revgrad = ">=0.2.0"
regex = ">=2022.1.18"
scikit-learn = ">=1.0.2"
segtok = ">=1.5.11"
sqlitedict = ">=2.0.0"
tabulate = ">=0.8.10"
torch = ">=1.5.0,!=1.8"
tqdm = ">=4.63.0"
transformer-smaller-training-vocab = ">=0.2.3"
transformers = { extras = ["sentencepiece"], version =">=4.18.0" }
wikipedia-api = ">=0.5.7"


[tool.poetry.group.dev.dependencies]
black = { extras = ["jupyter"], version = ">=23.3.0" }
konoha = ">=4.6.5,<5.0.0"
mypy = ">=1.2.0"
pytest = ">=7.3.1"
pytest-black-ng = ">=0.4.1"
pytest-github-actions-annotate-failures = ">=0.1.8"
pytest-mypy = ">=0.10.3"
pytest-ruff = ">=0.0.5"
types-dataclasses = ">=0.6.6"
types-Deprecated = ">=1.2.9.2"
types-requests = ">=2.28.11.17"
types-tabulate = ">=0.9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.pytest_cache
    | build
    | dist
    | venv
  )/
)
'''
[tool.pytest.ini_options]
addopts = "--black --mypy --ruff"
filterwarnings = [
    "error",  # Convert all warnings to errors
    'ignore:torch.tensor results are registered as constants in the trace. You can safely ignore this warning if you use this function to create tensors out of constant variables',  # Distilbert warning
    'ignore:TorchScript will treat type annotations of Tensor:UserWarning',  # Torch onnx export warns about it ignoring types, however we still like types.
    'ignore:Please use `triu` from the `scipy.linalg` namespace, the `scipy.linalg.special_matrices` namespace is deprecated.',  # ignore gensim using deprecated scipy
    'ignore:bilinear is deprecated and will be removed in Pillow 10',  # huggingface layoutlmv2 has deprecated calls.
    'ignore:nearest is deprecated and will be removed in Pillow 10',  # huggingface layoutlmv2 has deprecated calls.
    'ignore:The `device` argument is deprecated and will be removed in v5 of Transformers.',  # hf layoutlmv3 calls deprecated hf.
    "ignore:the imp module is deprecated:DeprecationWarning:past",  # ignore DeprecationWarning from hyperopt dependency
    "ignore:.*imp module.*:DeprecationWarning",  # ignore DeprecationWarnings that involve imp module
    "ignore:The class LayoutLMv3FeatureExtractor is deprecated and will be removed in version 5 of Transformers. Please use LayoutLMv3ImageProcessor instead.",  # huggingface layoutlmv3 has deprecated calls.
]
markers = [
    "integration",
]
testpaths = ["flair", "tests"]
[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["annotation-unchecked"]
exclude = [".git/", ".venv/", "__pycache__", "build", "venv"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module="flair.embeddings.legacy"
ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py37"

#select = ["ALL"]    # Uncommit to autofix all the things
select = [
  "C4",
  "COM",
  "E",
  "EXE",
  "F",
  "I",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PLE",
  "PYI",
  "Q",
  "RSE",
  "RUF",
  "SIM",
  "T10",
  "TID",
  "UP",
  "W",
  "YTT",
]

ignore = [
  "COM812", # Do not force trailing commas for function argument lists
  "E501",   # Ignore line too long
]

unfixable = [
  "ERA",    # Do not delete commented code
  "EXE001", # Do not check python files for executability, doesn't work well on windows
  "EXE002", # Do not check python files for executability, doesn't work well on windows
  "F841",   # Do not remove unused variables automatically
]

[tool.pydocstyle]
match = "^(?!legacy).*\\.py$"
